// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding Screen should match snapshot 1`] = `""`;

exports[`Onboarding Screen should render got it button for active slide 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "backgroundColor": "#F0F5F9",
      "flex": 1,
      "justifyContent": "space-around",
    }
  }
>
  <View
    style={
      Object {
        "height": 48,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SnapCarousel
      activeSlide={2}
      bubbleRef={[Function]}
      carouselData={
        Array [
          Object {
            "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
            "image_url": "https://homzhub-bucket.s3.amazonaws.com/Search_Onboarding.svg",
            "title": "Search",
          },
          Object {
            "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
            "image_url": "https://homzhub-bucket.s3.amazonaws.com/Post_Onboarding.svg",
            "title": "Post",
          },
          Object {
            "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
            "image_url": "https://homzhub-bucket.s3.amazonaws.com/Maintain_Onboarding.svg",
            "title": "Maintain",
          },
        ]
      }
      carouselItem={[Function]}
      currentSlide={[Function]}
      testID="carsl"
    />
    <PaginationComponent
      activeSlide={2}
      dotsLength={3}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "space-around",
        "padding": 24,
        "textAlign": "center",
      }
    }
  >
    <Text
      textType="bold"
      type="large"
    >
      Maintain
    </Text>
    <Label
      style={
        Object {
          "textAlign": "center",
        }
      }
      textType="regular"
      type="large"
    >
      Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.
    </Label>
    <Button
      containerStyle={
        Object {
          "flex": 0,
        }
      }
      onPress={[Function]}
      testID="btnNextFrame"
      title="common:gotIt"
      type="primary"
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Onboarding Screen should render with data in state 1`] = `
<ForwardRef(SafeAreaView)
  style={
    Object {
      "backgroundColor": "#F0F5F9",
      "flex": 1,
      "justifyContent": "space-around",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
      }
    }
  >
    <Button
      containerStyle={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flex": 0,
        }
      }
      onPress={[Function]}
      testID="btnGettingStarted"
      title="skip"
      type="secondary"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SnapCarousel
      activeSlide={0}
      bubbleRef={[Function]}
      carouselData={
        Array [
          Object {
            "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
            "image_url": "https://homzhub-bucket.s3.amazonaws.com/Search_Onboarding.svg",
            "title": "Search",
          },
          Object {
            "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
            "image_url": "https://homzhub-bucket.s3.amazonaws.com/Post_Onboarding.svg",
            "title": "Post",
          },
          Object {
            "description": "Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.",
            "image_url": "https://homzhub-bucket.s3.amazonaws.com/Maintain_Onboarding.svg",
            "title": "Maintain",
          },
        ]
      }
      carouselItem={[Function]}
      currentSlide={[Function]}
      testID="carsl"
    />
    <PaginationComponent
      activeSlide={0}
      dotsLength={3}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "space-around",
        "padding": 24,
        "textAlign": "center",
      }
    }
  >
    <Text
      textType="bold"
      type="large"
    >
      Search
    </Text>
    <Label
      style={
        Object {
          "textAlign": "center",
        }
      }
      textType="regular"
      type="large"
    >
      Sit amet, in enim nunc, etiam amet velit. Malesuada non neque nec in a.
    </Label>
    <Button
      containerStyle={
        Object {
          "flex": 0,
        }
      }
      onPress={[Function]}
      testID="btnNextFrame"
      title="common:next"
      type="primary"
    />
  </View>
</ForwardRef(SafeAreaView)>
`;

exports[`Onboarding Screen should render without data in state 1`] = `""`;
